# yelisport

./: .dockerignore  .env.example  .gitignore  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cd.yml  ci.yml
api/openapi/: openapi.yaml
apps/mobile/: .metadata  analysis_options.yaml  l10n.yaml  pubspec.yaml
scripts/: bootstrap.sh  lint.sh  test.sh
services/api/: alembic.ini  pyproject.toml  requirements.txt
services/api/app/: main.py
services/api/app/api/: router.py
services/api/app/api/dependencies/: auth.py
services/api/app/api/middleware/: error_handler.py  request_context.py
services/api/app/api/v1/: router.py
services/api/app/api/v1/endpoints/: auth.py  events.py  health.py  sports.py
services/api/app/core/: config.py  exceptions.py  logging.py
services/api/app/db/: base.py  session.py
services/api/app/db/migrations/: env.py
services/api/app/db/migrations/versions/: 20260710_0001_identity_sports.py  20260710_0002_events.py  20260710_0003_profiles_favorites.py
services/api/app/models/: __init__.py  event.py  sport.py  user.py  user_preferences.py
services/api/app/repositories/: event_repository.py  sport_repository.py
services/api/app/schemas/: auth.py  common.py  event.py  sport.py
services/api/app/services/: auth_service.py  event_service.py  sport_service.py
services/api/tests/: conftest.py
services/api/tests/api/: test_auth.py  test_events.py  test_health.py  test_sports.py
supabase/: config.toml
(+61 files in other folders)
